--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "copy-to-clipboard": "^3.3.1"
   }
 }
