Change author in manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,6 @@
 	"name": "joplin-note-ext",
 	"description": "TODO.",
 	"version": "0.1.0",
-	"author": "Benji300",
+	"author": "Benjamin Seifert",
 	"homepage_url": "https://github.com/benji300/joplin-note-ext"
 }
