--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "joplin-plugin-ext",
+  "name": "joplin-note-ext",
   "version": "0.1.0",
-  "description": "TODO",
+  "description": "This plugin provides features to enhance working with notes and to-dos.",
   "keywords": [
     "joplin",
     "plugin",
     "note",
     "commands"
   ],
-  "author": "Benji300",
+  "author": "Benjamin Seifert",
   "license": "MIT",
   "homepage": "https://github.com/benji300/joplin-note-ext",
   "bugs": {
@@ -25,13 +25,15 @@
     "pack-tar": "npm pack",
     "release": "npm run dist && npm run pack-zip && npm run pack-tar"
   },
-  "files": [
-    "dist"
-  ],
+  
   "devDependencies": {
     "@types/node": "^14.0.14",
     "copy-webpack-plugin": "^6.1.0",
+    "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
     "npm-pack-zip": "^1.2.7",
+    "on-build-webpack": "^0.1.0",
+    "tar": "^6.0.5",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
