--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "joplin-note-ext",
   "version": "0.1.0",
-  "description": "This plugin provides features to enhance working with notes and to-dos.",
+  "description": "This plugin provides commands to enhance working with notes and to-dos.",
   "keywords": [
     "joplin",
-    "plugin",
-    "note",
-    "commands"
+    "plugin"
   ],
   "author": "Benjamin Seifert",
   "license": "MIT",
@@ -25,7 +23,9 @@
     "pack-tar": "npm pack",
     "release": "npm run dist && npm run pack-zip && npm run pack-tar"
   },
-  
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/node": "^14.0.14",
     "copy-webpack-plugin": "^6.1.0",
