Update README and author info

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "joplin",
     "plugin"
   ],
-  "author": "Benjamin Seifert",
+  "author": "Benji300",
   "license": "MIT",
   "homepage": "https://github.com/benji300/joplin-note-ext",
   "bugs": {
