--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,6 @@
 	"version": "0.1.0",
 	"name": "Note Extensions",
 	"description": "This plugin provides commands to enhance working with notes and to-dos.",
-	"author": "Benjamin Seifert",
+	"author": "Benji300",
 	"homepage_url": "https://github.com/benji300/joplin-note-ext"
 }
