--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
 	"manifest_version": 1,
-	"id": "com.benji300.joplin.note-ext",
+	"id": "com.benji300.joplin.commands",
 	"app_min_version": "1.4",
 	"version": "0.1.0",
-	"name": "Note Extensions",
+	"name": "Command Extension",
 	"description": "This plugin provides commands to enhance working with notes and to-dos.",
 	"author": "Benji300",
-	"homepage_url": "https://github.com/benji300/joplin-note-ext"
+	"homepage_url": "https://github.com/benji300/joplin-commands"
 }
