--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
 	"app_min_version": "1.4",
 	"version": "0.1.0",
 	"name": "Command Collection",
-	"description": "Collection of commands to improve and speed up your work with Joplin.",
+	"description": "Collection of commands to improve and speed up your daily work with Joplin.",
 	"author": "Benji300",
 	"homepage_url": "https://github.com/benji300/joplin-commands"
 }
