--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "com.benji300.joplin.commands",
-  "version": "0.2.0",
-  "description": "Collection of commands to improve and speed up your daily work with Joplin.",
-  "keywords": [
-    "joplin",
-    "plugin"
-  ],
+  "name": "joplin-plugin-benji300-commands",
+  "version": "1.0.0",
+  "description": "Plugin for Joplin which provides a collection of commands to improve and speed up your daily work.",
   "author": "Benji300",
-  "license": "MIT",
   "homepage": "https://github.com/benji300/joplin-commands",
   "bugs": {
     "url": "https://github.com/benji300/joplin-commands/issues"
@@ -18,20 +13,19 @@
   },
   "scripts": {
     "dist": "webpack",
-    "postinstall": "npm run dist",
-    "pack-zip": "npm-pack-zip",
-    "pack-tar": "npm pack",
-    "release": "npm run dist && npm run pack-zip && npm run pack-tar"
+    "prepare": "npm run dist",
+    "update": "npm install -g generator-joplin && yo joplin --update"
   },
-  "files": [
-    "dist"
+  "license": "MIT",
+  "keywords": [
+    "joplin-plugin"
   ],
   "devDependencies": {
     "@types/node": "^14.0.14",
+    "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
-    "npm-pack-zip": "^1.2.7",
     "on-build-webpack": "^0.1.0",
     "tar": "^6.0.5",
     "ts-loader": "^7.0.5",
