--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,11 @@
 {
 	"manifest_version": 1,
-	"id": "com.benji300.joplin.commands",
-	"app_min_version": "1.4",
-	"version": "0.2.0",
+	"id": "joplin-plugin-benji300-commands",
+	"app_min_version": "1.5",
+	"version": "1.0.0",
 	"name": "Command Collection",
 	"description": "Collection of commands to improve and speed up your daily work with Joplin.",
 	"author": "Benji300",
-	"homepage_url": "https://github.com/benji300/joplin-commands"
+	"homepage_url": "https://github.com/benji300",
+	"repository_url": "https://github.com/benji300/joplin-commands"
 }
