--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 1,
-  "id": "joplin.plugin.commands",
-  "app_min_version": "1.7",
+  "id": "joplin.plugin.benji.commands",
+  "app_min_version": "1.6.5",
   "version": "1.0.0",
   "name": "Command Collection",
   "description": "Collection of commands to improve and speed up your daily work with Joplin.",
